--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 tmp
 dist
-dependencies.js
+# dependencies.js
 vendor.js
 specs.js
-*bundle.js
+# *bundle.js
 _SpecRunner.html
-*.woff2
-*.woff
-*.svg
-*.ttf
-*.eot
+# *.woff2
+# *.woff
+# *.svg
+# *.ttf
+# *.eot
 
 # Created by https://www.gitignore.io
 
